--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,9 @@
 
 
 body{
-    font-family: "Inter", serif;
+  font-family: "Inter", serif;
   font-optical-sizing: auto;
+  /* Add other styles here */
+  
 }
+
